# mini-dwh-sales-pipeline

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt  СОДЕРЖАНИЕ_ДЕТАЛЬНОЕ.md  СОДЕРЖАНИЕ_КУРСОВОЙ.md
config/: airflow.cfg
dags/: config.py  endpoints.py  etl_dag.py  get_info_30_days_async_dag.py  get_info_30_days_dag.py  get_info_subjects_30_days_async_dag.py  get_info_subjects_30_days_dag.py  get_info_subjects_dag.py  get_l1_l2_dag.py  get_l3_dag.py  get_l3_mini.py  get_season_ratio_async_dag.py  l1_l2_data-2.csv  l1_l2_data.csv  loading_data_to_postgres_dag.py  parsing.ipynb
dags/file/: info_subject_30_days.csv
dags/files/: info_30_days.csv  info_subjects.csv  l1_l2_data-3.csv  l3_data_mini-3.csv
etl/: Dockerfile  etl_sales.py  pyproject.toml
init_postgres/: 01_create_schema.sql  02_superset.sql
minio-data/.minio.sys/: format.json
minio-data/.minio.sys/tmp/.trash/01bb1d89-59d4-45f5-9d6e-a1849e5e6ab4/: xl.meta.bkp
pg-data/: postmaster.pid
pg-data/base/1/: 2619  2696  2840  pg_internal.init
pg-data/base/16384/: 1247  1247_vm  1249  1249_fsm  1249_vm  1259  1259_vm  2579  2606  2606_vm  2608  2608_fsm  2608_vm  2610  2610_vm  2619  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  5002
pg-data/base/5/: 2619  pg_internal.init
pg-data/global/: 1260  1262  2671  pg_control  pg_internal.init
superset/: .bash_history  Dockerfile  requirements-local.txt  superset-init.sh  superset.db
superset_data/: superset.db
(+3 files in other folders)
